# rbac

./: README.md  check_chroma.py  pyproject.toml  requirements.txt  setup.py  start_app.bat  start_servers.py  streamlit_app.py  test_api.py
app/: main.py
app/api/: auth.py  chat.py
app/core/: roles.py  settings.py
app/schemas/: chat.py  login.py
app/services/: auth_service.py  rag_service.py
data/chroma/: chroma.sqlite3
scripts/: ingest.py
